--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "name": "Kuro Bot",
     "short_name": "KuroBot",
     "description": "Enhance your gaming experience with our powerful bots that helps you in Kuro Games.",
-    "start_url": "/index.html",
+    "id": "/projectKuro/",
+    "start_url": "/projectKuro/index.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000",
